--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.2",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mongoose": "^6.2.5",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
     "uuid": "^8.3.2"
   }
